# autobots-fastapi-class

./: .gitignore  README.md
challenges/utils_challenge/: .gitignore  main.py
challenges/utils_challenge/tests/: test_math_utils.py  test_string_utils.py
challenges/utils_challenge/utils/: math_utils.py  string_utils.py
python_playground/: main.py  main2.py
python_playground/tests/: test_json_placeholder.py  test_math_utils.py
python_playground/utils/: math_utils.py
session2_poetry/: pyproject.toml
session2_poetry/tests/: requests_todo_challenge.md  test_todos.py
session3_pip/: main.py
session3_poetry/: main1.py  main2.py  main3.py  pyproject.toml
